--- a/app/MemberModule/components/RatingControl.latte
+++ b/app/MemberModule/components/RatingControl.latte
@@ -32,7 +32,7 @@
                     </h4>
 
 					<div n:if="$rating->message" class="message">
-						<a href="#rating/{$memberId}" class="noLink">{$rating->message|texy|noescape}</a>
+						<a href="#rating/{$memberId}" class="noLink">{$rating->message|texy}</a>
 					</div>
                 {/if}
             </div>
