--- a/app/MemberModule/templates/Akce.export.latte
+++ b/app/MemberModule/templates/Akce.export.latte
@@ -5,7 +5,7 @@
 <body>
 <div n:foreach="$akceList as $akce">
 <b>{$akce->name}</b> {$akce->date_start|date:'d.m.Y'}{if $akce->date_start->diff($akce->date_end)->days}-{$akce->date_end|date:'d.m.Y'}{/if}
-{$akce->perex|texy|noescape}
+{$akce->perex|texy}
 <br />
 </div>
 </body>
