--- a/app/MemberModule/components/BillingControl.latte
+++ b/app/MemberModule/components/BillingControl.latte
@@ -1,11 +1,16 @@
+{import '../templates/@svg.latte'}
+
 <style type="text/css" n:syntax="off">
-	.number { width: 3em }
-	.currency { width: 6em }
+	#billing .number { width: 3em }
+	#billing .currency { width: 6em }
+	#billing .number, #billing .currency { text-align: right }
 	#billing h4 { margin-bottom: 0 }
+	#billing textarea { width: 100%; min-height: auto; background: none;}
 </style>
 
 <h3>Vyúčtování</h3>
-<div id="billing">
+
+<div id="billing" n:if="$edit">
 {form billingForm}
 	<h4>Příjmy</h4>
 	<table id="income">
@@ -57,42 +62,62 @@
 
 	<p>{label income /} {input income} {label expense /} {input expense} {label final /} {input final}</p>
 
-	<p>{input save}</p>
+	<div>
+        {input note}
+	</div>
 
-	<script type="application/javascript" defer n:nonce>
-		document.querySelectorAll('input.remove').forEach(function (el) {
-			el.addEventListener('click', function () {
-				const row       = el.parentElement.parentElement;
-				const category  = row.parentElement.parentElement.id;
-				const old       = parseFloat(row.querySelector('input.final').value);
+	<p class="right">
+		<button n:name="save" class="buttonLike">
+            {include svg check} uložit
+		</button>
+	</p>
 
-				recount(category, old, 0);
-				row.remove();
-			});
-		});
-
-		document.querySelectorAll('input.price, input.count').forEach(function (el) {
-			el.addEventListener('change', function () {
-				const row       = el.parentElement.parentElement;
-				const category  = row.parentElement.parentElement.id;
-				const final     = parseFloat(row.querySelector('input.price').value) * parseInt(row.querySelector('input.count').value);
-				var   field     = row.querySelector('input.final');
-				const old       = parseFloat(field.value);
-				field.value = final;
-
-			   recount(category, old, final);
-			})
-		});
-
-		function recount(name, oldPrice, newPrice) {
-			var el = document.getElementById('billing-'+name);
-			const value = parseFloat(el.value);
-			el.value = value + newPrice - oldPrice;
-
-			const incomes = parseFloat(document.getElementById('billing-income').value);
-			const expenses = parseFloat(document.getElementById('billing-expense').value);
-			document.getElementById('billing-final').value = incomes - expenses;
-		}
-	</script>
 {/form}
+
+
+<script type="application/javascript" defer n:nonce>
+	document.querySelectorAll('input.remove').forEach(function (el) {
+		el.addEventListener('click', function () {
+			const row       = el.parentElement.parentElement;
+			const category  = row.parentElement.parentElement.id;
+			const old       = parseFloat(row.querySelector('input.final').value);
+
+			recount(category, old, 0);
+			row.remove();
+		});
+	});
+
+	document.querySelectorAll('input.price, input.count').forEach(function (el) {
+		el.addEventListener('change', function () {
+			const row       = el.parentElement.parentElement;
+			const category  = row.parentElement.parentElement.id;
+			const final     = parseFloat(row.querySelector('input.price').value) * parseInt(row.querySelector('input.count').value);
+			var   field     = row.querySelector('input.final');
+			const old       = parseFloat(field.value);
+			field.value = final;
+
+		   recount(category, old, final);
+		})
+	});
+
+	function recount(name, oldPrice, newPrice) {
+		var el = document.getElementById('billing-'+name);
+		const value = parseFloat(el.value);
+		el.value = value + newPrice - oldPrice;
+
+		const incomes = parseFloat(document.getElementById('billing-income').value);
+		const expenses = parseFloat(document.getElementById('billing-expense').value);
+		document.getElementById('billing-final').value = incomes - expenses;
+	}
+</script>
+
+</div>
+
+<div id="billing" n:if="!$edit">
+	{if $billing}
+		<p class="right"><a class="buttonLike" n:href="this, edit => 1">{include svg pencil} editovat</a></p>
+	{else}
+		<p><a class="buttonLike" n:href="this, edit => 1">{include svg pencil} vytvořit</a></p>
+	{/if}
+
 </div>
