--- a/www/vzsjablonec/css/member.css
+++ b/www/vzsjablonec/css/member.css
@@ -84,16 +84,10 @@ input[type='text'], input[type='password'], input[type='date'], input[type='date
 input[type='time'], input[type='search'], input[type='tel'], select {
 background-color: #eee; border: 1px solid gray; border-radius: 2px; color: #404040;}
 
-textarea { border: 1px solid gray; background-color: white;
-	background-image: -moz-linear-gradient(top,#c6c5d7,white 20%);
-	background-image: -webkit-linear-gradient(top,#c6c5d7,white 20%);
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#c6c5d7),color-stop(0.2,white));
-	background-image: linear-gradient(top,#c6c5d7,white 20%);
-}
+textarea { border: 1px solid gray; background-color: white; width: 100%; min-height: auto; box-sizing: border-box; padding: 1ex; font-family: sans-serif;
+	font-size: 90%; height: auto;}
 
-textarea { min-height: 10em; height: auto; }
-
-textarea.texyla {background-image: none; border: none;}
+textarea.texyla {border: none;}
 
 input[type='text']:hover, input[type='password']:hover, input[type='date']:hover, input[type='datetime']:hover, 
 input[type='email']:hover, input[type='number']:hover, input[type='time']:hover, textarea:hover, select:hover,
