Move javascript into separate file

--- a/app/MemberModule/components/BillingControl.latte
+++ b/app/MemberModule/components/BillingControl.latte
@@ -94,41 +94,6 @@
 
 	<p class="right"><button n:name="save" class="buttonLike">{include svg check} uložit</button></p>
 {/form}
-</div>
-
-<script type="application/javascript" defer n:nonce>
-	document.querySelectorAll('input.remove').forEach(function (el) {
-		el.addEventListener('click', function () {
-			const row       = el.parentElement.parentElement;
-			const category  = row.parentElement.parentElement.id;
-			const old       = parseFloat(row.querySelector('input.final').value);
-
-			recount(category, old, 0);
-			row.remove();
-		});
-	});
-
-	document.querySelectorAll('input.price, input.count').forEach(function (el) {
-		el.addEventListener('change', function () {
-			const row       = el.parentElement.parentElement;
-			const category  = row.parentElement.parentElement.id;
-			const final     = parseFloat(row.querySelector('input.price').value) * parseInt(row.querySelector('input.count').value);
-			var   field     = row.querySelector('input.final');
-			const old       = parseFloat(field.value);
-			field.value = final;
-
-		   recount(category, old, final);
-		})
-	});
-
-	function recount(name, oldPrice, newPrice) {
-		var el = document.getElementById('billing-'+name);
-		const value = parseFloat(el.value);
-		el.value = value + newPrice - oldPrice;
-
-		const incomes = parseFloat(document.getElementById('billing-income').value);
-		const expenses = parseFloat(document.getElementById('billing-expense').value);
-		document.getElementById('billing-final').value = incomes - expenses;
-	}
-</script>
+<script type="application/javascript" src="{$baseUrl}/js/member.billing.js" defer></script>
 {/if}
+</div>
