CSS file names refactoring

--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -1,8 +1,8 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUrl}/css/rating.css" type="text/css" n:if="$akceIsOld">
-<link rel="stylesheet" href="{$baseUrl}/css/album.preview.css" type="text/css" n:if="$akce->album_id">
-<link rel="stylesheet" href="{$baseUrl}/css/anketa.css" type="text/css" n:if="$akce->anketa_id">
-<link rel="stylesheet" href="{$baseUrl}/css/forum.posts.css" type="text/css" n:if="$akce->forum_topic_id">
+<link rel="stylesheet" href="{$baseUrl}/css/member.rating.css" type="text/css" n:if="$akceIsOld">
+<link rel="stylesheet" href="{$baseUrl}/css/photo.album.preview.css" type="text/css" n:if="$akce->album_id">
+<link rel="stylesheet" href="{$baseUrl}/css/member.anketa.css" type="text/css" n:if="$akce->anketa_id">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.posts.css" type="text/css" n:if="$akce->forum_topic_id">
 <style type="text/css" n:syntax="off">
 	.member_list a.char { text-decoration: none; vertical-align: top; }
 	.member_list { list-style-type: decimal; font-size: 1em;}
