--- a/app/MemberModule/templates/Forum.search.latte
+++ b/app/MemberModule/templates/Forum.search.latte
@@ -1,7 +1,7 @@
 {block #head}
 <link rel="alternate" title="VZS Jablonec Forum" n:href="//Feed:forum" type="application/rss+xml">
-<link rel="stylesheet" href="{$baseUrl}/css/forum.css" type="text/css">
-<link rel="stylesheet" href="{$baseUrl}/css/forum.posts.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.posts.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
 	table#items .headerLike { border-radius: 0}
