--- a/app/PhotoModule/templates/Myself.default.latte
+++ b/app/PhotoModule/templates/Myself.default.latte
@@ -1,6 +1,6 @@
 {block #head}
 <link rel="stylesheet" type="text/css" href="{$baseUrl}/css/jquery-ui.min.css" />
-<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/photolist.css">
+<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/photo.photolist.css">
 <style type="text/css" n:syntax="off">
 #news { margin-left: 2em;}
 #news h3 { margin-bottom: 0;}
