--- a/app/PhotoModule/templates/News.default.latte
+++ b/app/PhotoModule/templates/News.default.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/photolist.css">
+<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/photo.photolist.css">
 <style type="text/css" n:syntax="off">
 	#slides { position: relative; height: 360px;}
 	#js-slides { display: none;}
