--- a/app/MemberModule/templates/Akce.feedback.latte
+++ b/app/MemberModule/templates/Akce.feedback.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUrl}/css/forum.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
 h2 { margin-top: 1ex;}
