--- a/app/MemberModule/templates/Ankety.view.latte
+++ b/app/MemberModule/templates/Ankety.view.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUrl}/css/anketa.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.anketa.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
 	h2 { margin-top: 1ex;}
