--- a/app/MemberModule/templates/Forum.category.latte
+++ b/app/MemberModule/templates/Forum.category.latte
@@ -1,7 +1,7 @@
 {block #head}
 <link rel="alternate" title="VZS Jablonec Forum : {$forum->title}" n:href="//Feed:forum, fid => $forum->id" type="application/rss+xml">
 
-<link rel="stylesheet" href="{$baseUrl}/css/forum.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.css" type="text/css">
 
 <link rel="stylesheet" href="{$baseUrl}/texyla/css/style.css" type="text/css">
 <link rel="stylesheet" href="{$baseUrl}/texyla/css/theme.css" type="text/css">
