--- a/app/MemberModule/templates/Forum.default.latte
+++ b/app/MemberModule/templates/Forum.default.latte
@@ -1,7 +1,7 @@
 {block #head}
 <link rel="alternate" title="VZS Jablonec Member Forum" n:href="//Feed:forum" type="application/rss+xml">
 
-<link rel="stylesheet" href="{$baseUrl}/css/forum.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
 	table#items { margin-top: 1em; }
