--- a/app/MemberModule/templates/Forum.edit.latte
+++ b/app/MemberModule/templates/Forum.edit.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUrl}/css/forum.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.css" type="text/css">
 
 <link rel="stylesheet" href="{$baseUrl}/texyla/css/style.css" type="text/css">
 <link rel="stylesheet" href="{$baseUrl}/texyla/css/theme.css" type="text/css">
