--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -1,8 +1,8 @@
 {block #head}
 <link rel="alternate" title="VZS Jablonec Forum : {$topic->title}" n:href="//Feed:forum, tid => $topic->id" type="application/rss+xml">
 
-<link rel="stylesheet" href="{$baseUrl}/css/forum.css" type="text/css">
-<link rel="stylesheet" href="{$baseUrl}/css/forum.posts.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/member.forum.posts.css" type="text/css">
 
 <link rel="stylesheet" href="{$baseUrl}/texyla/css/style.css" type="text/css">
 <link rel="stylesheet" href="{$baseUrl}/texyla/css/theme.css" type="text/css">
