--- a/app/PhotoModule/templates/Album.default.latte
+++ b/app/PhotoModule/templates/Album.default.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUrl}/css/photolist.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/photo.photolist.css" type="text/css">
 <script src="{$baseUrl}/js/nette.ajax.js"></script>
 <script type="text/javascript" n:syntax="off" n:nonce>
 	$(function () {
