--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -136,7 +136,7 @@
 		<li n:if="$member->mail2">
 			{include svg envelope-o} <b>Sekundární e-mail:</b> <a href="mailto:{$member->mail2}">{$member->mail2}</a>
 		</li>
-		<li n:if="$member->telefon2">
+		<li n:if="$member->telefon2">k
 			{include svg phone-square} <b>Sekundární telefon:</b> <a href="tel:+420{$member->telefon2}">{$member->telefon2|phone}</a>
 		</li>
 	</ul>
@@ -145,7 +145,9 @@
 
 	<p n:if="$age"><b>Věk:</b> {$age->format('%y')}</p>
 
-	{if $user->isInRole('member')}
+	<p n:if="$user->isInRole('board')"><b>Registrace:</b> {foreach $member->related('user_registration')->order('year') as $registration}{$registration->year}{sep}, {/sep}{/foreach}</p>
+
+    {if $user->isInRole('member')}
 		<h3>{include svg map-marker} Adresa {include mapy $member->ulice.' '.$member->mesto}</h3>
 		<address class="out">
 			{$member->ulice}<br>
