Some changes to make RSS wok in year 2019

--- a/app/MemberModule/templates/Feed.albums.latte
+++ b/app/MemberModule/templates/Feed.albums.latte
@@ -1,4 +1,4 @@
-{contentType application/xml; charset=utf-8}
+{contentType text/xml; charset=utf-8}
 {block #content}
 <title>VZS Jablonec Fotogalerie</title>
 <link>{link //:Photo:Album:default}</link>
