--- a/app/MemberModule/templates/Feed.akce.latte
+++ b/app/MemberModule/templates/Feed.akce.latte
@@ -1,12 +1,11 @@
-{contentType application/rss+xml; charset=utf-8}
+{contentType text/xml; charset=utf-8}
 {block #content}
 <title>VZS Jablonec Akce</title>
 <link>{link //Akce:default}</link>
 <description>Akce VZS Jablonec</description>
 <item n:foreach="$items as $item">
-	<title>{$item->name|firstUpper}</title>	
-	{var $member = $item->user}
-	<author>{if $member}{$member->mail} ({$member->surname} {$member->name}{else} info@vzs-jablonec.cz (VZS Jablonec){/if})</author>
+	<title>{$item->name|firstUpper}</title>
+	<author>{if $item->user}{$item->user->mail} ({$item->user->surname} {$item->user->name}{else} info@vzs-jablonec.cz (VZS Jablonec){/if})</author>
 	<link>{link //Akce:view $item->id}</link>
 	<guid isPermaLink="false">{$item->id}@{link Akce:default}</guid>
 	<description>
